# ChangeLog for sys-apps/calculate-templates
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-templates-2.2.27-r1 (14 Dec 2011)

  14 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.27-r1.ebuild,
  +files/calculate-templates-2.2.27-r1.patch:
  Update for bugfix

*calculate-templates-2.2.27 (12 Dec 2011)

  12 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.27.ebuild:
  Bump version

*calculate-templates-2.2.26-r6 (01 Dec 2011)

  01 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.26-r6.ebuild,
  +files/calculate-templates-2.2.26-r6.patch:
  Fix for libreoffice-3.5

*calculate-templates-2.2.26-r3 (23 Nov 2011)

  23 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.26-r3.ebuild,
  +files/calculate-templates-2.2.26-r3.patch:
  Update templates for skype

*calculate-templates-2.2.26-r1 (18 Nov 2011)

  18 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.26-r1.ebuild,
  +files/calculate-templates-2.2.26-r1.patch:
  Update for fix libreoffice

*calculate-templates-2.2.26 (16 Nov 2011)

  16 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.26.ebuild:
  Version bump

*calculate-templates-2.2.25-r7 (10 Nov 2011)

  10 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.25-r7.ebuild,
  +files/calculate-templates-2.2.25-r7.patch:
  Update for git portage

*calculate-templates-2.2.25-r6 (04 Nov 2011)

  04 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.25-r6.ebuild,
  +files/calculate-templates-2.2.25-r6.patch:
  Update for libreoffice

*calculate-templates-2.2.25-r5 (02 Nov 2011)

  02 Nov 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.25-r5.ebuild,
  +files/calculate-templates-2.2.25-r5.patch:
  Update for opera and libreoffice
