@@ -17,6 +17,7 @@ DIST calculate-templates-2.2.24-r9.tar.bz2 248040 RMD160 a4523a32ce2374bb993821f
 DIST calculate-templates-2.2.25-r3.tar.bz2 248748 RMD160 90ea765808f2aa73079df10e35105691594b01ff SHA1 1a2543f98fc2f503595f31da136eceeb437f9889 SHA256 08292837f7f63648c5c39dfeb334d9e47e6dfc479b2a5d0b5066dbc8cfd28a34
 DIST calculate-templates-2.2.25.tar.bz2 248801 RMD160 e25f0aacb69d7a8c2ad05bc6a9963542d6da089c SHA1 094baf9b4f04dd3edd626e69f1e9f1d67c3acbaf SHA256 89e48b483f74681911ba76af1372e5e71f92c69b022ee267362efba010f19df2
 DIST calculate-templates-2.2.26.tar.bz2 249641 RMD160 58e137de66b4d939dbc2d7b76655148d2f85aa07 SHA1 ef64dd5f013de885922e260e8afce401700510d7 SHA256 4e2e0025a2ca44474f34ae6bb7b6b3d4d5804af80abf5065d432772e79009eed
+DIST calculate-templates-2.2.27-r3.tar.bz2 224666 RMD160 f323f7fd1cbff99b3517a0e4295fc54262f79c8d SHA1 6e42b617e4b93b3eb4d2146117b0c64df1309a2b SHA256 2ab8a8509532e3da2fbb3b540f5a97e041b7e8d7b741e8310cf14c607fc5e5c3
 DIST calculate-templates-2.2.27.tar.bz2 224415 RMD160 547b93f028e8d6111433d0b57c9aa3e5d78f22f5 SHA1 46df7caad244552064e38e7ad52f5d2e17ac5582 SHA256 eec7d5578731c158e43364b447d165b86ad8f73835b9b54efc3c81008d32c790
 EBUILD calculate-templates-2.2.24-r18.ebuild 1020 RMD160 43bc0dd6a61cd90f59b97a8037b6c4cc09b06eff SHA1 1f27355708a3cd47310ae1f3cd2670d74c8dd5ea SHA256 e6b9d88573e79c4586f776f191d20d8e7333c0f1a96f76fe4745e67835bf496d
 EBUILD calculate-templates-2.2.25-r1.ebuild 720 RMD160 9bc519969132c8af236031210a3ab4e598c00392 SHA1 649240338a85d4be898881b3de47dcf86c4778d9 SHA256 07d6a11c959f23584f2056f54bb4e8b1ac50c2605139685ab9a070067a4007b1
@@ -35,7 +36,8 @@ EBUILD calculate-templates-2.2.26-r6.ebuild 739 RMD160 7c97ab6cdcf10d00248ff860d
 EBUILD calculate-templates-2.2.26.ebuild 582 RMD160 3dcf8661ba167ffb576dad192db64541289c6943 SHA1 1819d2a7ad16d01a21a52f202db86feed371452e SHA256 b5a2bf38e4a28bd4034a12d90b6a9ebd01f871064532f9cffbb75a9c5f1a5ea0
 EBUILD calculate-templates-2.2.27-r1.ebuild 711 RMD160 e700cfdbb431e246fab0081b44e2c31b4d0ece9e SHA1 b60c2f1dec28a24fd45a68e736884d48a5663323 SHA256 1ee1bc77023744c401e0e62303314f58fef10ef7dc15ae489ab27c7fb350a39b
 EBUILD calculate-templates-2.2.27-r2.ebuild 705 RMD160 482719f606f3da9015a9896d5abe265668150024 SHA1 db7a886f12a54868aa71162f6a8b38356807decb SHA256 4b01caa7e462dbfc090e0a062080fc02bfec2e64050387c87bc789081014ee28
+EBUILD calculate-templates-2.2.27-r3.ebuild 585 RMD160 e42a15c9c68601ad34a7d0723cc3a1e680b7b7d3 SHA1 57637fa0ca43c01d581d93550ac28a87000a8677 SHA256 b6fd9fc9725207c6071061097a61f0428b13d039630fc7b599155224a7b5c0b7
 EBUILD calculate-templates-2.2.27.ebuild 582 RMD160 022e8c68fd88c52bda47af92bcaaf099a9d548fa SHA1 63a6f0ad3164fb48620f3221b439b9594f624809 SHA256 be508fa78fc87ff763aa5df43dedb60c8221a56bf15c5acd7e9c711da39dd35c
 EBUILD calculate-templates-2.2.9999.ebuild 588 RMD160 8cafdd0daa7954e72c0b1268de2bcb6231c60d29 SHA1 505be2090f00df6c97b9b7e8b25716c7c0c1299a SHA256 2cbfb74187bc5d197ea7d2187d570b8e1981eba5f724623d44f461435a25d5a6
-MISC ChangeLog 39659 RMD160 34671ba2c2d9e118ff352e733d7c8bf80bc3a027 SHA1 ab60204d629b7974e270e90c8a567e314bf67a82 SHA256 0f38124e892cee3904dd44e6380cfdac6a7b8c3cc6e03442bf3dcc5f848a0ebc
+MISC ChangeLog 39824 RMD160 1183296e17ef512f88258c5e6cf9bdbedab295bd SHA1 74b043d77ea37b67de7b14a97a9be1ec6e73d23d SHA256 0ed65457950639a1f5b080a79ea8931d092ba1f062b91fba0ead923bcdc76b9f
 MISC metadata.xml 338 RMD160 4a1a51881bdf09b961217d2056114ca4ccb8b4d2 SHA1 5fcb2724427f9ac5dda07abb5c829c24e6db9ae6 SHA256 175d9ae86b71b291a519414e816b05290d0e4be74726cc8d5449a500c51a3b2d
