@@ -33,7 +33,8 @@ EBUILD calculate-utilities-2.2.27-r2.ebuild 873 RMD160 af0dcf66a461c4a8d3fa6337d
 EBUILD calculate-utilities-2.2.27-r3.ebuild 873 RMD160 8628d675e4ba74655b5bf659d2174ea841a98546 SHA1 f1ee774dc3f3bf2d236ef9dabc238b158bea0fa4 SHA256 4f6f60097dec896b2d37be3351f5c8506bcfd8c59a9a8ba86ce3ebc30faba6ef
 EBUILD calculate-utilities-2.2.27-r4.ebuild 876 RMD160 8933c301d60d0faf13a1a01c1c44c3207fc7676a SHA1 33f71f1ddf01e29e9dc82fdc6a14264fd9675f1c SHA256 f3652d96e6bbb08f550ec5537a166a0b349afcd1d1b7df444dc521c2cccef04a
 EBUILD calculate-utilities-2.2.27-r5.ebuild 876 RMD160 e25441bf618945e03428d99d0c6c345783385c47 SHA1 11725a9b845cb06438dd69c8f6e4963f5bee4982 SHA256 872c0e3285f349a9698bf0d6a2879171e996fc517d6eb7e7009deb26bc7eaa6d
+EBUILD calculate-utilities-2.2.27-r6.ebuild 876 RMD160 9916759bf201e05f478af61d188e5f83ee8ab179 SHA1 7548d67862e68175f439a8e295b4833eb4fa3cb8 SHA256 924f746b328c0efab86cac828cb4552323237d5fafc36dacc6340d8f3a3b3a31
 EBUILD calculate-utilities-2.2.27.ebuild 861 RMD160 d840018012b50f856de0042966facf8ee93007b9 SHA1 3f805525a322977dcb6cc442dcd933c90855c175 SHA256 1a2a97e4dde488e880820a5a97ff974ae3dd068c2d894a9b962c35d24dad4eec
 EBUILD calculate-utilities-2.2.9999.ebuild 842 RMD160 f2c0fdc1068614b71a37f2226dcde4883ebd2876 SHA1 99f673a52934f552589baf6d12ed9bffc03b8ebd SHA256 56d97b7d2ce11d23b25d9036b4e2ee196b547ce1d11b0cc349a8205515b66bf1
 EBUILD calculate-utilities-3.0.9999.ebuild 441 RMD160 ec17f871ec70a322cff866048e50c150931e0e95 SHA1 d0e036ba01e6a71ad14e6f3e6735bbd0f325df99 SHA256 30c6cd4ce478016cb75458314ea4e745ccb1501be33f14c3a2593d9d0e670c9c
-MISC ChangeLog 36928 RMD160 c7ac3576bfea91e7a682943d3cae9644abb2c78f SHA1 4bd5fb72d6b7964a6be360c72b5e303863a1ed0f SHA256 b4c7857f39b7b4a0d54f8361a9b190cd45a1df1cb1fb39823ffaeeffd8e4bd73
+MISC ChangeLog 37110 RMD160 c77768b54dcae531df72434f4e7594c0768d4e50 SHA1 af3cc3ebcb2e181f9f77a06c18c2841c56955a10 SHA256 f32a2baf1674bde2250d2a6a670864de0b76139640c4dc29e81f40f56d30b533
