@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.27-r6 (19 Dec 2011)
+
+  19 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.27-r6.ebuild:
+  Update for calculate-templates.
+
 *calculate-utilities-2.2.27-r5 (16 Dec 2011)
 
   16 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
