@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-templates-2.2.27-r3 (19 Dec 2011)
+
+  19 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-templates-2.2.27-r3.ebuild:
+  Update for fix
+
 *calculate-templates-2.2.27-r1 (14 Dec 2011)
 
   14 Dec 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
